# guirecognizer

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.rst  make.bat  pyproject.toml  visualStudioCodeSettings.json
docs/: api.rst  app.rst  bots.rst  conf.py  examples.rst  index.rst  motivation.rst  overview.rst  requirements.txt  tips.rst
docs/_static/: site.webmanifest
docs/_templates/: layout.html
docs/example/: cookieClicker.rst  otteretto.rst  sushiGoRound.rst
examples/cookieClicker/: README.rst  cookieClicker.py
examples/otteretto/: README.rst  otteretto.json  otteretto.py
examples/sushiGoRound/: README.rst  sushiGoRound.py
guirecognizer/: __init__.py  action_type.py  common.py  mouse_helper.py  mouse_manager.py  preprocessing.py  preprocessing_type.py  recognizer.py  types.py
scripts/: optimizeImages.sh
tests/: testMouseHelper.py  testPreprocessing.py  testRecognizer.py  test_utility.py
tests/data/json/: config1.json  config2.json  config3.json  config4.json  invalid.json
