[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guirecognizer"
dynamic = ["version"]
dependencies = ["numpy", "opencv-python", "imagehash", "pyautogui"]
# TODO: add an email
authors = [{ name = "FAB V" }]
keywords = ["GUI", "recognizer"]
license = "MIT"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "packaging",
  "coverage",
  "build",
  "twine",
  "pytesseract",
  "easyocr",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autodoc-typehints",
]

[project.urls]
Repository = "https://github.com/fab5code/guirecognizer.git"
Issues = "https://github.com/fab5code/guirecognizer/issues"

[tool.setuptools.dynamic]
version = { attr = "guirecognizer.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["guirecognizer*"]

[tool.coverage.run]
command_line = "-m unittest discover"
branch = true
omit = ["config.py", "config-3.py"]

[tool.coverage.report]
exclude_also = [
  '@(abc\\.)?abstractmethod',
  '^ +assert_never\(.*?\)$',
  '^ +case _ as unreachable:$',
  '@overload',
]
